--- a/public_html/style.css
+++ b/public_html/style.css
@@ -15,7 +15,7 @@ html{
 }
 
 body{
-    background: cadetblue;
+    background: #dddddd;
     margin: 30px 50px;
     Line-height:1.4;
 }
@@ -89,14 +89,14 @@ img{
 .showcase h1{
     font-size: 4rem;
     margin-bottom:0;
-    color: var(--light);
+    color: var(--dark);
 
 }
 
 .showcase p{
     font-size: 1.3rem;
     margin-top: 0;
-    color: var(--light);
+    color: var(--dark);
 }
 
 .top-box {
@@ -104,7 +104,7 @@ img{
     display: grid;
     align-items: center;
     justify-items: center;
-    box-shadow: var(--shadow);
+    box-shadow: var(--dark);
     padding: 1.5rem
 }
 
