--- a/public_html/style.css
+++ b/public_html/style.css
@@ -7,6 +7,10 @@
 
 }
 
+li{
+    display: inline;
+}
+
 html{
     box-sizing:border-box;
     font-family: Arial, Helvetica, sans-serif;
@@ -77,7 +81,6 @@ img{
     grid-area:showcase;
     min-height: 100px;
     background-size: cover;
-    background: url(img/showcase.jpg) center;
     padding: 3rem;
     display: flex;
     flex-direction: column;
