--- a/public_html/style.css
+++ b/public_html/style.css
@@ -1,6 +1,7 @@
 /* CSS Variables */
 :root{
-    --primary:  #ddd;
+    --primary: #ffa500;
+    --stock: #008080;
     --dark: #333;
     --light: #fff;
     --shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
@@ -14,19 +15,21 @@ li{
 html{
     box-sizing:border-box;
     font-family: Arial, Helvetica, sans-serif;
-    color: var(--dark);
+    color: var(--stock);
 
 }
 
 body{
-    background: #dddddd;
+    background: var(--light);
     margin: 30px 50px;
     Line-height:1.4;
 }
 
 .btn{
-    background-color: var(--dark);
-    color: var(--light);
+    position: static;
+    border: 3px solid #73AD21;
+    background-color: var(--primary);
+    color: var(--dark);
     padding: 0.6rem 1.3rem;
     text-decoration: none;
     border:0;
@@ -51,12 +54,12 @@ img{
 }
 
 .main-nav a{
-    background: var(--primary);
+    background: var(--dark);
     display: block;
     text-decoration: none;
     padding: 0.8rem;
     text-align: center;
-    color: var(--dark);
+    color: var(--light);
     text-transform: uppercase;
     font-size: 1.1rem;
     box-shadow: var(--shadow);
@@ -64,7 +67,7 @@ img{
 
 .main-nav a:hover {
     background: var(--dark);
-    color:var(--light);
+    color:var(--dark);
 }
 
 /* Top Container*/
@@ -103,7 +106,7 @@ img{
 }
 
 .top-box {
-    background: var(--primary);
+    background: var(--light);
     display: grid;
     align-items: center;
     justify-items: center;
